# seconddx-web

./: .dockerignore  .editorconfig  .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  .sugar.yaml  LICENSE  README.md  mkdocs.yaml  pyproject.toml
.envs/: .django.tpl  .env.tpl  .postgres.tpl
.github/workflows/: ci.yml  release.yaml
conda/: dev.yaml  production.yaml
containers/: compose.base.yaml  compose.dev.yaml  compose.prod.yaml
containers/celery/dev/flower/: start
containers/django/dev/: Dockerfile
containers/django/prod/: Dockerfile  start
containers/django/scripts/: activate.sh  entrypoint.sh  install-deps.sh
containers/nginx/: Dockerfile
containers/nginx/data/config/prod/: mymhai.nginx.conf  options-ssl-nginx.conf  seconddx.nginx.conf
containers/nginx/scripts/: generate-certificates.sh  generate_proxy_ui.py
containers/nginx/templates/: nginx.template.conf
containers/postgres/: Dockerfile
containers/traefik/: Dockerfile  traefik.yml
docs/: __init__.py  contributing.md  index.md
scripts/: autobuild_frontend.py  gen_ref_nav.py  run-vulture.py
src/backend/: conftest.py  manage.py
src/backend/config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
src/backend/config/settings/: base.py  dev.py  prod.py  test.py
src/backend/locale/: README.md
src/backend/locale/en_US/LC_MESSAGES/: django.po
src/backend/locale/fr_FR/LC_MESSAGES/: django.po
src/backend/locale/pt_BR/LC_MESSAGES/: django.po
src/backend/seconddx_web/: __init__.py  conftest.py  urls.py  views.py
src/backend/seconddx_web/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
src/backend/seconddx_web/management/commands/: createsuperuser.py
src/backend/seconddx_web/static/css/: project.css
src/backend/seconddx_web/templates/: base.html  generic.html
src/backend/seconddx_web/templates/account/: login.html  signup.html
src/backend/seconddx_web/templates/allauth/elements/: field.html
src/backend/seconddx_web/templates/allauth/layouts/: manage.html
src/backend/seconddx_web/templates/users/: user_detail.html  user_form.html
src/backend/seconddx_web/templatetags/: dicebear.py  frontend.py
src/backend/seconddx_web/users/: adapters.py  admin.py  apps.py  managers.py  models.py  signals.py  views.py
src/backend/seconddx_web/users/api/: serializers.py  views.py
src/backend/seconddx_web/users/migrations/: 0001_initial.py  0002_historicaluser.py
src/backend/seconddx_web/users/tests/: factories.py  test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_managers.py  test_models.py  test_simple_history.py  test_swagger.py  test_tasks.py  test_urls.py  test_views.py
src/backend/seconddxlib/: medical_reports.py
src/backend/seconddxlib/tests/: test_medical_report.py
src/frontend/: README.md  package-lock.json  package.json  webpack.config.js
src/frontend/public/: index.html
src/frontend/src/: App.js  index.js
src/frontend/src/libs/: context.js  csrf.js
src/frontend/src/pages/about/: about.js
src/frontend/src/pages/home/: home.css  home.js
